empire and region hierarchical view
